--- a/Makefile.in
+++ b/Makefile.in
@@ -198,7 +198,12 @@ GENCODE_AMD= --amdgpu-target=gfx803 --amdgpu-target=gfx900 --amdgpu-target=gfx90
 @COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@GENCODE = $(GENCODE_20)
 
 
-SET_MPI_LIB=-L/opt/ompi/lib -lmpi_mpifh -lmpi -lmpi_cxx #This paths must be set by you according to your MPI lib
+#Setting MPI library for linking to HIP compiler.
+FIND_LIB= -L$(shell ${MPIFC} --showme:libdirs)
+FIND_LIB += $(shell ${MPIFC} --showme:libs)
+FIND_LIB += $(shell mpicxx --showme:libs)
+SET_MPI_LIB = $(shell echo ${FIND_LIB} | sed -e 's/\b\([a-z]\+\)[ ,\n]\1/\1/g'| sed 's/mpi/-lmpi/2'| sed 's/mpi/-lmpi/4'| sed 's/mpi/-lmpi/6'| sed 's/mpi/-lmpi/8' | sed 's/mpi/-lmpi/9')
+
 SET_HIP_LIB=-L/opt/rocm/lib/ -lhip_hcc
 HIP_FLAGS = @HIP_FLAGS@
 HIP_INC = @HIP_CPPFLAGS@ -I${SETUP}
