--- a/Makefile.in
+++ b/Makefile.in
@@ -215,13 +215,13 @@ HIP_LINKING=$(NVCC) -lgfortran -g -O2  -std=f2003 -pedantic -pedantic-errors -Wa
 
 
 # HIP flags and linking
-@COND_HIP_TRUE@HIP_FLAGS = -fPIC -ftemplate-depth-2048
+@COND_HIP_TRUE@HIP_FLAGS = -fPIC -ftemplate-depth-2048 -fno-gpu-rdc
 @COND_HIP_TRUE@HIP_FLAGS += $(HIP_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS)
 @COND_HIP_TRUE@HIP_LINKING += $(GENCODE)
 
 @COND_CUDA_TRUE@HIP_FLAGS = -fPIC -ftemplate-depth-2048
 @COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@HIP_FLAGS += -dc -DCUDA $(GENCODE)
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@HIP_FLAGS += -DCUDA -DUSE_OLDER_CUDA4_GPU $(GENCODE)
+@COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@HIP_FLAGS += -DCUDA $(GENCODE)
 
 @COND_HIP_FALSE@@COND_CUDA_FALSE@HIP_FLAGS = $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS)
 @COND_HIP_FALSE@@COND_CUDA_FALSE@HIP_LINK = $(NVCC) $(HIP_FLAGS)
