--- a/Makefile.in
+++ b/Makefile.in
@@ -132,7 +132,7 @@ PART_LIBS  += $(PATOH_LIBS)
 
 #######################################
 ####
-#### CUDA AND HIP
+#### GPU (CUDA AND HIP)
 #### 
 #######################################
 @COND_HIP_TRUE@HIP = yes
@@ -141,24 +141,6 @@ PART_LIBS  += $(PATOH_LIBS)
 @COND_CUDA_TRUE@CUDA = yes
 @COND_CUDA_FALSE@CUDA = no
 
-@COND_CUDA5_TRUE@CUDA5 = yes
-@COND_CUDA5_FALSE@CUDA5 = no
-
-@COND_CUDA6_TRUE@CUDA6 = yes
-@COND_CUDA6_FALSE@CUDA6 = no
-
-@COND_CUDA7_TRUE@CUDA7 = yes
-@COND_CUDA7_FALSE@CUDA7 = no
-
-@COND_CUDA8_TRUE@CUDA8 = yes
-@COND_CUDA8_FALSE@CUDA8 = no
-
-@COND_CUDA9_TRUE@CUDA9 = yes
-@COND_CUDA9_FALSE@CUDA9 = no
-
-# CUDA compilation with linking
-@COND_CUDA_PLUS_TRUE@CUDA_PLUS = yes
-@COND_CUDA_PLUS_FALSE@CUDA_PLUS = no
 
 ##
 ## GPU architecture
@@ -172,30 +154,24 @@ PART_LIBS  += $(PATOH_LIBS)
 # Maxwell (cuda7,K2200): -gencode=arch=compute_50,code=sm_50
 # Pascal (cuda8,P100): -gencode=arch=compute_60,code=sm_60
 # Volta (cuda9,V100): -gencode=arch=compute_70,code=sm_70
-GENCODE_20 = -gencode=arch=compute_20,code=\"sm_20,compute_20\"
-GENCODE_30 = -gencode=arch=compute_30,code=\"sm_30,compute_30\"
-GENCODE_35 = -gencode=arch=compute_35,code=\"sm_35,compute_35\"
-GENCODE_37 = -gencode=arch=compute_37,code=\"sm_37\"
-GENCODE_50 = -gencode=arch=compute_50,code=\"sm_50,compute_50\"
-GENCODE_60 = -gencode=arch=compute_60,code=\"sm_60,compute_60\"
-GENCODE_70 = -gencode=arch=compute_70,code=\"sm_70,compute_70\"
+GENCODE_70 = -gencode arch=compute_70,code=sm_70
+GENCODE_62 = -gencode arch=compute_62,code=sm_62
+GENCODE_61 = -gencode arch=compute_61,code=sm_61
+GENCODE_60 = -gencode arch=compute_60,code=sm_60
+GENCODE_53 = -gencode arch=compute_53,code=sm_53
+GENCODE_52 = -gencode arch=compute_52,code=sm_52
+GENCODE_50 = -gencode arch=compute_50,code=sm_50
+GENCODE_37 = -gencode arch=compute_37,code=sm_37
+GENCODE_35 = -gencode arch=compute_35,code=sm_35
+GENCODE_30 = -gencode arch=compute_30,code=sm_30
+
 GENCODE_AMD= --amdgpu-target=gfx803 --amdgpu-target=gfx900 --amdgpu-target=gfx906
 
 # preprocessor flag
-#AMD version
+# AMD version
 @COND_HIP_TRUE@GENCODE= $(GENCODE_AMD)
-# CUDA version 9.0
-@COND_CUDA_TRUE@@COND_CUDA9_TRUE@GENCODE = $(GENCODE_70) $(FC_DEFINE)GPU_DEVICE_Volta
-# CUDA version 8.0
-@COND_CUDA_TRUE@@COND_CUDA8_TRUE@GENCODE = $(GENCODE_60) $(FC_DEFINE)GPU_DEVICE_Pascal
-# CUDA version 7.x
-@COND_CUDA_TRUE@@COND_CUDA7_TRUE@GENCODE = $(GENCODE_50) $(FC_DEFINE)GPU_DEVICE_Maxwell
-# CUDA version 6.5
-@COND_CUDA_TRUE@@COND_CUDA6_TRUE@GENCODE = $(GENCODE_37) $(FC_DEFINE)GPU_DEVICE_K80
-# CUDA version 5.x
-@COND_CUDA_TRUE@@COND_CUDA5_TRUE@GENCODE = $(GENCODE_35) $(FC_DEFINE)GPU_DEVICE_K20
-# CUDA version 4.x
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@GENCODE = $(GENCODE_20)
+# CUDA version
+@COND_CUDA_TRUE@GENCODE= $(GENCODE_30) $(GENCODE_35) $(GENCODE_50) $(GENCODE_37) $(GENCODE_60) $(GENCODE_70) 
 
 
 #Setting MPI library for linking to HIP compiler.
@@ -204,32 +180,31 @@ MPI_LIBS += $(shell ${MPIFC} --showme:libs)
 MPI_LIBS += $(shell mpicxx --showme:libs)
 SET_MPI_LIB = ${MPI_LIB_PATH} $(shell echo ${MPI_LIBS} | sed -e 's/\b\([a-z]\+\)[ ,\n]\1/\1/g'|sed 's/[^ ]* */-l&/g')
 
-SET_HIP_LIB = @HIP_LDFLAGS@ @HIP_LIBS@
-HIP_INC = @HIP_CPPFLAGS@ -I${SETUP}
+@COND_HIP_TRUE@SET_HIP_LIB = @HIP_LDFLAGS@ @HIP_LIBS@
+@COND_HIP_TRUE@HIP_INC = @HIP_CPPFLAGS@ -I${SETUP}
+@COND_CUDA_TRUE@HIP_INC += @CUDA_INC@
+@COND_CUDA_TRUE@SET_HIP_LIB += @CUDA_LDFLAGS@ @CUDA_LIBS@
 
 @COND_HIP_TRUE@NVCC = hipcc
 @COND_CUDA_TRUE@NVCC = hipcc
 @COND_HIP_FALSE@@COND_CUDA_FALSE@NVCC = @CC@
 
-HIP_LINKING=$(NVCC) -lgfortran -g -O2  -std=f2003 -pedantic -pedantic-errors -Waliasing -Wampersand -Wcharacter-truncation -Wline-truncation -Wsurprising -Wno-tabs -Wunderflow -O3 -finline-functions
-
+HIP_LINKING=$(NVCC) -lgfortran
 
 # HIP flags and linking
 @COND_HIP_TRUE@HIP_FLAGS = -fPIC -ftemplate-depth-2048 -fno-gpu-rdc
 @COND_HIP_TRUE@HIP_FLAGS += $(HIP_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS)
 @COND_HIP_TRUE@HIP_LINKING += $(GENCODE)
 
-@COND_CUDA_TRUE@HIP_FLAGS = -fPIC -ftemplate-depth-2048
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@HIP_FLAGS += -dc -DCUDA $(GENCODE)
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@HIP_FLAGS += -DCUDA $(GENCODE)
+@COND_CUDA_TRUE@HIP_FLAGS = $(HIP_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS) 
+@COND_CUDA_TRUE@HIP_FLAGS += -dc -DCUDA $(GENCODE)
 
 @COND_HIP_FALSE@@COND_CUDA_FALSE@HIP_FLAGS = $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS)
 @COND_HIP_FALSE@@COND_CUDA_FALSE@HIP_LINK = $(NVCC) $(HIP_FLAGS)
 
 
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@NVCCLINK_BASE = $(NVCC) $(HIP_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS) -DCUDA
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_TRUE@NVCCLINK = $(NVCCLINK_BASE) -dlink $(GENCODE)
-@COND_CUDA_TRUE@@COND_CUDA_PLUS_FALSE@NVCCLINK = $(NVCCLINK_BASE) -DUSE_OLDER_CUDA4_GPU $(GENCODE)
+@COND_CUDA_TRUE@NVCCLINK_BASE = $(NVCC) $(HIP_INC) $(MPI_INCLUDES) $(COND_MPI_CPPFLAGS) -DCUDA
+@COND_CUDA_TRUE@NVCCLINK = $(NVCCLINK_BASE) -dlink $(GENCODE)
 
 #######################################
 ####
